ALLPIX_ENABLE_DEFAULT(OFF)
ALLPIX_UNIQUE_MODULE(MODULE_NAME)

find_package(PkgConfig REQUIRED)
pkg_check_modules(PQXX REQUIRED IMPORTED_TARGET libpqxx)

TARGET_LINK_LIBRARIES(${MODULE_NAME} PkgConfig::PQXX)

ALLPIX_MODULE_SOURCES(${MODULE_NAME} DatabaseWriterModule.cpp)

ALLPIX_MODULE_INSTALL(${MODULE_NAME})
