# SPDX-FileCopyrightText: 2020-2024 CERN and the Allpix Squared authors
# SPDX-License-Identifier: MIT

ALLPIX_ENABLE_DEFAULT(OFF)
ALLPIX_UNIQUE_MODULE(MODULE_NAME)

# Find and link libpqxx
PKG_CHECK_MODULES(PQXX REQUIRED IMPORTED_TARGET libpqxx)
TARGET_LINK_LIBRARIES(${MODULE_NAME} PkgConfig::PQXX)

ALLPIX_MODULE_SOURCES(${MODULE_NAME} DatabaseWriterModule.cpp)

ALLPIX_MODULE_INSTALL(${MODULE_NAME})
